--- a/passafari/Base.lproj/Main.storyboard
+++ b/passafari/Base.lproj/Main.storyboard
@@ -304,11 +304,11 @@ DQ
             <objects>
                 <viewController showSeguePresentationStyle="single" id="XfG-lQ-9wD" customClass="ViewController" customModule="Passafari" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="208"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="185"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fxF-JA-hxx">
-                                <rect key="frame" x="18" y="169" width="128" height="17"/>
+                                <rect key="frame" x="18" y="145" width="128" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" refusesFirstResponder="YES" alignment="right" title="Passwordstore path:" id="H3K-O3-s38">
                                     <font key="font" usesAppearanceFont="YES"/>
@@ -317,7 +317,7 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DPR-go-wEp">
-                                <rect key="frame" x="152" y="166" width="227" height="22"/>
+                                <rect key="frame" x="152" y="143" width="227" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Passwordstore" drawsBackground="YES" id="IGY-Mj-uck">
                                     <font key="font" metaFont="system"/>
@@ -326,7 +326,7 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q9a-zQ-TJ2">
-                                <rect key="frame" x="381" y="159" width="85" height="32"/>
+                                <rect key="frame" x="381" y="136" width="85" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Browse" bezelStyle="rounded" alignment="center" refusesFirstResponder="YES" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oOT-h2-Kwm">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -337,20 +337,11 @@ DQ
                                 </connections>
                             </button>
                             <box verticalHuggingPriority="750" fixedFrame="YES" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="MTr-Kw-Cr6">
-                                <rect key="frame" x="20" y="155" width="440" height="5"/>
+                                <rect key="frame" x="20" y="132" width="440" height="5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </box>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hx4-k0-MEc">
-                                <rect key="frame" x="41" y="130" width="105" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" refusesFirstResponder="YES" alignment="right" title="Private key path:" id="M2w-A0-dKT">
-                                    <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s4S-r3-3Nt">
-                                <rect key="frame" x="152" y="127" width="227" height="22"/>
+                                <rect key="frame" x="152" y="104" width="227" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Key path" drawsBackground="YES" id="Ypr-Z2-u7d">
                                     <font key="font" metaFont="system"/>
@@ -359,7 +350,7 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dei-Xy-yuM">
-                                <rect key="frame" x="381" y="120" width="85" height="32"/>
+                                <rect key="frame" x="381" y="97" width="85" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Browse" bezelStyle="rounded" alignment="center" refusesFirstResponder="YES" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NxS-5P-4j6">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -370,7 +361,7 @@ DQ
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PA2-m9-tF4">
-                                <rect key="frame" x="68" y="97" width="78" height="17"/>
+                                <rect key="frame" x="68" y="74" width="78" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" refusesFirstResponder="YES" alignment="right" title="Passphrase:" id="iMx-tB-Ef3">
                                     <font key="font" usesAppearanceFont="YES"/>
@@ -378,32 +369,24 @@ DQ
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rza-Ck-Rjv">
-                                <rect key="frame" x="152" y="95" width="227" height="22"/>
+                            <secureTextField verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rza-Ck-Rjv">
+                                <rect key="frame" x="152" y="72" width="227" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="F9O-y7-eUj">
+                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" allowsUndo="NO" borderStyle="bezel" placeholderString="Passphrase" drawsBackground="YES" usesSingleLineMode="YES" id="F9O-y7-eUj">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <allowedInputSourceLocales>
-                                        <string>NSAllRomanInputSourcesLocaleIdentifier</string>
-                                    </allowedInputSourceLocales>
                                 </secureTextFieldCell>
+                                <connections>
+                                    <action selector="updatePassphrase:" target="XfG-lQ-9wD" id="IU0-Bm-KoH"/>
+                                </connections>
                             </secureTextField>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hUY-DV-P9E">
-                                <rect key="frame" x="150" y="71" width="161" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="check" title="Remember passphrase" bezelStyle="regularSquare" imagePosition="left" alignment="left" refusesFirstResponder="YES" state="on" inset="2" id="fZL-iB-Lay">
-                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                            </button>
                             <box verticalHuggingPriority="750" fixedFrame="YES" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="FGh-WR-f7E">
-                                <rect key="frame" x="20" y="62" width="440" height="5"/>
+                                <rect key="frame" x="20" y="61" width="440" height="5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </box>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UgZ-L1-Ls5">
-                                <rect key="frame" x="75" y="39" width="71" height="17"/>
+                                <rect key="frame" x="75" y="40" width="71" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" refusesFirstResponder="YES" alignment="right" title="Show icon:" id="asa-9K-xuE">
                                     <font key="font" metaFont="system"/>
@@ -433,6 +416,15 @@ DQ
                                     <action selector="toggleDockIcon:" target="XfG-lQ-9wD" id="pkS-Az-n1o"/>
                                 </connections>
                             </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hx4-k0-MEc">
+                                <rect key="frame" x="41" y="106" width="105" height="17"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" refusesFirstResponder="YES" alignment="right" title="Private key path:" id="M2w-A0-dKT">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
@@ -440,13 +432,14 @@ DQ
                         <outlet property="keyPathTextField" destination="s4S-r3-3Nt" id="DiB-oj-SNP"/>
                         <outlet property="passPathBrowseButton" destination="q9a-zQ-TJ2" id="b5Y-bd-6AR"/>
                         <outlet property="passPathTextField" destination="DPR-go-wEp" id="TbG-zf-f3u"/>
+                        <outlet property="passphraseField" destination="rza-Ck-Rjv" id="l5t-sc-rO7"/>
                         <outlet property="showDockCheck" destination="XhP-7l-cem" id="fd4-Bz-qEc"/>
                         <outlet property="showStatusCheck" destination="hXc-Yf-B79" id="Zkh-bs-54F"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="617"/>
+            <point key="canvasLocation" x="75" y="605.5"/>
         </scene>
         <!--Key Path View Controller-->
         <scene sceneID="gZI-Au-NW0">
