--- a/extension/Base.lproj/SafariExtensionViewController.xib
+++ b/extension/Base.lproj/SafariExtensionViewController.xib
@@ -11,6 +11,7 @@
                 <outlet property="heightConstraint" destination="SV0-Ae-A2a" id="2EK-f9-tly"/>
                 <outlet property="searchField" destination="rnR-2m-fJL" id="4uF-tZ-BCl"/>
                 <outlet property="searchResultsTable" destination="4gY-te-H9m" id="VlM-8b-gy3"/>
+                <outlet property="startPassafariButton" destination="Gjk-6y-lsc" id="aAj-J0-wwy"/>
                 <outlet property="view" destination="c22-O7-iKe" id="vwT-Xx-Aiz"/>
                 <outlet property="widthConstraint" destination="BUF-Rw-yho" id="n5a-gH-XyA"/>
             </connections>
@@ -79,10 +80,23 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
+                <button focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Gjk-6y-lsc">
+                    <rect key="frame" x="-6" y="-7" width="342" height="32"/>
+                    <buttonCell key="cell" type="push" title="Start Passafari" bezelStyle="rounded" alignment="center" borderStyle="border" focusRingType="none" imageScaling="proportionallyDown" inset="2" id="HUb-eB-6Nd">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="startPassafari:" target="-2" id="yU2-eB-Q5F"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="rnR-2m-fJL" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="6Iu-LL-9bb"/>
                 <constraint firstItem="hEo-1O-ZXu" firstAttribute="bottom" secondItem="c22-O7-iKe" secondAttribute="bottom" id="BCa-Vl-vrt"/>
+                <constraint firstItem="Gjk-6y-lsc" firstAttribute="leading" secondItem="hEo-1O-ZXu" secondAttribute="leading" id="MPC-ao-YWp"/>
+                <constraint firstItem="Gjk-6y-lsc" firstAttribute="bottom" secondItem="c22-O7-iKe" secondAttribute="bottom" id="NuQ-dY-nAQ"/>
+                <constraint firstItem="Gjk-6y-lsc" firstAttribute="trailing" secondItem="hEo-1O-ZXu" secondAttribute="trailing" id="Qrt-dD-J35"/>
                 <constraint firstItem="rnR-2m-fJL" firstAttribute="trailing" secondItem="c22-O7-iKe" secondAttribute="trailing" id="XgE-vY-2sA"/>
                 <constraint firstItem="hEo-1O-ZXu" firstAttribute="top" secondItem="rnR-2m-fJL" secondAttribute="bottom" id="fli-6y-NVr"/>
                 <constraint firstItem="hEo-1O-ZXu" firstAttribute="leading" secondItem="rnR-2m-fJL" secondAttribute="leading" id="imK-2v-yBd"/>
